--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 /////////////
 
 plugins {
-    id "org.jetbrains.kotlin.jvm" version "1.3.50"
+    id "org.jetbrains.kotlin.jvm" version "1.3.60"
     id "com.jfrog.bintray" version "1.8.4"
     id "java-library"
     id "maven-publish"
@@ -17,7 +17,6 @@ plugins {
 //////////////////
 
 repositories {
-    mavenCentral()
     jcenter()
     maven {
         url  "https://dl.bintray.com/koriit/kotlin/"
@@ -25,7 +24,7 @@ repositories {
 }
 
 ext {
-    ktorVersion = "1.2.5"
+    ktorVersion = "1.2.6"
 }
 
 dependencies {
@@ -38,7 +37,8 @@ dependencies {
     implementation "io.ktor:ktor-server-core:$ktorVersion"
 
     // OpenAPI
-    implementation "koriit.kotlin:openapi-matcher:0.5.1"
+    compileOnly "koriit.kotlin:openapi-matcher:0.5.1"
+    testImplementation "koriit.kotlin:openapi-matcher:0.5.1"
 
     // TESTING
     testImplementation "org.junit.jupiter:junit-jupiter:5.5.0"
