--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,14 @@
 /////////////
 
 plugins {
-    id "org.jetbrains.kotlin.jvm" version "1.3.60"
+    id "org.jetbrains.kotlin.jvm" version "1.3.61"
     id "com.jfrog.bintray" version "1.8.4"
     id "java-library"
     id "maven-publish"
     id "jacoco"
     id "org.jlleitschuh.gradle.ktlint" version "9.1.1"
-    id "io.gitlab.arturbosch.detekt" version "1.2.0"
+    id "io.gitlab.arturbosch.detekt" version "1.2.2"
+    id "com.github.ben-manes.versions" version "0.27.0"
 }
 
 //////////////////
@@ -30,7 +31,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect"
 
     // KTOR
-    implementation "koriit.kotlin:ktor-controllers:0.3"
+    implementation "koriit.kotlin:ktor-controllers:0.4.2"
     implementation "io.ktor:ktor-server-core:$ktorVersion"
     implementation "io.ktor:ktor-server-host-common:$ktorVersion"
 
@@ -39,8 +40,24 @@ dependencies {
     testImplementation "koriit.kotlin:openapi-matcher:0.5.1"
 
     // TESTING
-    testImplementation "org.junit.jupiter:junit-jupiter:5.5.0"
+    testImplementation "org.junit.jupiter:junit-jupiter:5.5.2"
     testImplementation "io.ktor:ktor-server-test-host:$ktorVersion"
+}
+
+/////////////
+// UPDATES //
+/////////////
+
+def isNonStable = { String version ->
+    def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { it -> version.toUpperCase().contains(it) }
+    def regex = /^[0-9,.v-]+(-r)?$/
+    return !stableKeyword && !(version ==~ regex)
+}
+
+dependencyUpdates {
+    rejectVersionIf {
+        isNonStable(it.candidate.version) && !isNonStable(it.currentVersion)
+    }
 }
 
 /////////////
@@ -74,6 +91,7 @@ compileTestKotlin {
 //////////
 
 ktlint {
+    version = "0.36.0"
     verbose = true
 }
 
