--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,14 @@
 /////////////
 
 plugins {
-    id "org.jetbrains.kotlin.jvm" version "1.3.61"
-    id "com.jfrog.bintray" version "1.8.4"
+    id "org.jetbrains.kotlin.jvm" version "1.3.72"
+    id "com.jfrog.bintray" version "1.8.5"
     id "java-library"
     id "maven-publish"
     id "jacoco"
-    id "org.jlleitschuh.gradle.ktlint" version "9.1.1"
-    id "io.gitlab.arturbosch.detekt" version "1.2.2"
-    id "com.github.ben-manes.versions" version "0.27.0"
+    id "org.jlleitschuh.gradle.ktlint" version "9.2.1"
+    id "io.gitlab.arturbosch.detekt" version "1.7.4"
+    id "com.github.ben-manes.versions" version "0.28.0"
 }
 
 //////////////////
@@ -22,7 +22,7 @@ repositories {
 }
 
 ext {
-    ktorVersion = "1.2.6"
+    ktorVersion = "1.3.2"
 }
 
 dependencies {
@@ -31,16 +31,18 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect"
 
     // KTOR
-    implementation "koriit.kotlin:ktor-controllers:0.4.2"
+    implementation "koriit.kotlin:ktor-controllers:0.6.0"
     implementation "io.ktor:ktor-server-core:$ktorVersion"
     implementation "io.ktor:ktor-server-host-common:$ktorVersion"
 
     // OpenAPI
-    compileOnly "koriit.kotlin:openapi-matcher:0.5.1"
-    testImplementation "koriit.kotlin:openapi-matcher:0.5.1"
+    // the matcher part of this library is only for test use
+    // the matcher dependencies should not be included at all times
+    compileOnly "koriit.kotlin:openapi-matcher:0.6.2"
+    testImplementation "koriit.kotlin:openapi-matcher:0.6.2"
 
     // TESTING
-    testImplementation "org.junit.jupiter:junit-jupiter:5.5.2"
+    testImplementation "org.junit.jupiter:junit-jupiter:5.6.1"
     testImplementation "io.ktor:ktor-server-test-host:$ktorVersion"
 }
 
@@ -49,9 +51,8 @@ dependencies {
 /////////////
 
 def isNonStable = { String version ->
-    def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { it -> version.toUpperCase().contains(it) }
-    def regex = /^[0-9,.v-]+(-r)?$/
-    return !stableKeyword && !(version ==~ regex)
+    def regex = /^[0-9,.v-]+((-r)|(release)|(final)|(ga))?$/
+    return !(version.toLowerCase() ==~ regex)
 }
 
 dependencyUpdates {
@@ -64,25 +65,28 @@ dependencyUpdates {
 // COMPILE //
 /////////////
 
-sourceCompatibility = 1.8
 targetCompatibility = 1.8
+sourceCompatibility = targetCompatibility
+
+def compilerArgs = [
+        "-Xjsr305=strict"
+]
 
 compileKotlin {
     dependsOn ktlintFormat
     kotlinOptions {
-        freeCompilerArgs = ["-Xjsr305=strict"]
-        jvmTarget = "1.8"
+        freeCompilerArgs += compilerArgs
+        jvmTarget = "$targetCompatibility"
     }
 }
 
 compileTestKotlin {
     kotlinOptions {
-        freeCompilerArgs = [
-                "-Xjsr305=strict",
+        freeCompilerArgs += compilerArgs + [
                 "-Xuse-experimental=io.ktor.util.KtorExperimentalAPI",
                 "-Xuse-experimental=kotlin.ExperimentalStdlibApi"
         ]
-        jvmTarget = "1.8"
+        jvmTarget = "$targetCompatibility"
     }
 }
 
@@ -102,7 +106,7 @@ detekt {
 
 test {
     useJUnitPlatform {
-        excludeTags project.hasProperty("fast") ? "Slow" : "None"
+        excludeTags hasProperty("fast") ? "Slow" : "None"
     }
 }
 
@@ -110,7 +114,7 @@ jacoco {
     toolVersion = "0.8.4"
 }
 
-test.finalizedBy(jacocoTestReport)
+if (!hasProperty("fast")) test.finalizedBy(jacocoTestReport)
 
 /////////////
 // PUBLISH //
@@ -160,7 +164,7 @@ bintray {
         name = "ktor-controllers-openapi"
         version {
             name = project.version
-            released  = new Date()
+            released = new Date()
         }
     }
 }
