--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,9 @@
 
 plugins {
     id "org.jetbrains.kotlin.jvm" version "1.3.72"
-    id "com.jfrog.bintray" version "1.8.5"
     id "java-library"
     id "maven-publish"
+    id "signing"
     id "jacoco"
     id "org.jlleitschuh.gradle.ktlint" version "9.2.1"
     id "io.gitlab.arturbosch.detekt" version "1.7.4"
@@ -18,6 +18,7 @@ plugins {
 //////////////////
 
 repositories {
+    mavenCentral()
     jcenter()
 }
 
@@ -31,15 +32,15 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect"
 
     // KTOR
-    implementation "koriit.kotlin:ktor-controllers:0.6.0"
+    implementation "com.koriit.kotlin:ktor-controllers:0.6.0"
     implementation "io.ktor:ktor-server-core:$ktorVersion"
     implementation "io.ktor:ktor-server-host-common:$ktorVersion"
 
     // OpenAPI
     // the matcher part of this library is only for test use
     // the matcher dependencies should not be included at all times
-    compileOnly "koriit.kotlin:openapi-matcher:0.6.2"
-    testImplementation "koriit.kotlin:openapi-matcher:0.6.2"
+    compileOnly "com.koriit.kotlin:openapi-matcher:0.6.3"
+    testImplementation "com.koriit.kotlin:openapi-matcher:0.6.3"
 
     // TESTING
     testImplementation "org.junit.jupiter:junit-jupiter:5.6.1"
@@ -119,26 +120,19 @@ if (!hasProperty("fast")) test.finalizedBy(jacocoTestReport)
 /////////////
 // PUBLISH //
 /////////////
-
-task sourcesJar(type: Jar) {
-    from sourceSets.main.allSource
-    archiveClassifier = "sources"
-}
-
-task javadocJar(type: Jar) {
-    from javadoc
-    archiveClassifier = "javadoc"
+java {
+    withJavadocJar()
+    withSourcesJar()
 }
 
 publishing {
     publications {
-        bintrayMaven(MavenPublication) {
+        mavenJava(MavenPublication) {
             groupId = project.group
             artifactId = projectName
             version = project.version
             from components.java
-            artifact sourcesJar
-            artifact javadocJar
+
             pom {
                 name = "Ktor Controllers OpenAPI"
                 description = "Support for OpenAPI3 in ktor-controllers"
@@ -149,25 +143,43 @@ publishing {
                         url = "https://github.com/Koriit/ktor-controllers-openapi/blob/master/LICENSE"
                     }
                 }
+                developers {
+                    developer {
+                        id = 'koriit'
+                        name = 'Aleksander Stelmaczonek'
+                        email = 'al.stelmaczonek@gmail.com'
+                    }
+                }
+                scm {
+                    connection = 'scm:git:git://github.com/Koriit/ktor-controllers-openapi.git'
+                    developerConnection = 'scm:git:ssh://github.com/Koriit/ktor-controllers-openapi.git'
+                    url = 'https://github.com/Koriit/ktor-controllers-openapi'
+                }
             }
         }
     }
-}
 
-bintray {
-    user = System.getProperty("bintray.user")
-    key = System.getProperty("bintray.key")
-    publications = ["bintrayMaven"]
+    repositories {
+        maven {
+            credentials {
+                username = findProperty("sonatype.user") ?: System.getenv("SONATYPE_USERNAME")
+                password = findProperty("sonatype.password")?: System.getenv("SONATYPE_PASSWORD")
+            }
 
-    pkg {
-        repo = "kotlin"
-        name = "ktor-controllers-openapi"
-        version {
-            name = project.version
-            released = new Date()
+            def releasesRepoUrl = 'https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/'
+            def snapshotsRepoUrl = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
+            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
         }
     }
 }
+
+signing {
+    def signingKey = findProperty("signing.key") ?: System.getenv("PGP_SIGNING_KEY")
+    def signingPassword = findProperty("signing.password") ?: System.getenv("PGP_SIGNING_PASSWORD")
+    useInMemoryPgpKeys(signingKey, signingPassword)
+    sign publishing.publications.mavenJava
+}
+
 
 ///////////
 // OTHER //
