--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-group = koriit.kotlin
+group = com.koriit.kotlin
 projectName = ktor-controllers-openapi
 version = 0.4-SNAPSHOT
 org.gradle.jvmargs='-Dfile.encoding=UTF-8'
